fix: paths in index.html

--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -10,7 +10,7 @@
   <title>
     Movie app
   </title>
-<script defer src="/main-7feb52a9.js"></script><link href="/main-7feb52a9.css" rel="stylesheet"></head>
+<script defer src="main-7feb52a9.js"></script><link href="main-7feb52a9.css" rel="stylesheet"></head>
 <body>
   <div class="popup">
   <div class="popup__inner container">
