--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
   <title>
     Portfolio
   </title>
-<script defer src="main-d78ffa33.js"></script><link href="main-d78ffa33.css" rel="stylesheet"></head>
+<script defer src="main-3e1fba5f.js"></script><link href="main-3e1fba5f.css" rel="stylesheet"></head>
 <body>
   <header class="header">
     <div class="header__container container">
@@ -46,13 +46,6 @@
               <a class="header-menu__item-link" href="#contacts" data-translate="contacts">Contacts</a>
             </li>
           </ul>
-        </div>
-        <div class="theme-switcher">
-          <button class="theme-switcher__link theme-switcher__link_dark">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-              <path d="M14.354 0.068c-0.215 0.016-0.618 0.067-0.896 0.113-6.997 1.159-12.257 6.485-13.37 13.538-0.086 0.546-0.108 3.705-0.030 4.334 0.831 6.696 6.065 12.302 12.731 13.636 1.902 0.38 4.307 0.393 6.159 0.032 8.736-1.703 14.326-9.961 12.708-18.772-1.228-6.686-6.785-11.904-13.669-12.837-0.477-0.065-2.967-0.095-3.633-0.045zM17.192 2.037c10.231 0.98 16.042 12.219 10.862 21.010-2.473 4.197-7.148 6.963-11.769 6.965l-0.35 0v-28.024h0.37c0.203 0 0.603 0.022 0.888 0.050z"></path>
-            </svg>
-          </button>
         </div>
         <div class="language-switcher">
           <a class="language-switcher__link language-switcher__link_active" href="#" data-language="en">en</a>
@@ -136,7 +129,7 @@
             <button class="portfolio__button button" data-folder="winter" data-translate="winter">Winter</button>
             <button class="portfolio__button button" data-folder="spring" data-translate="spring">Spring</button>
             <button class="portfolio__button button" data-folder="summer" data-translate="summer">Summer</button>
-            <button class="portfolio__button button button_filled" data-folder="autumn" data-translate="autumn">Autumn</button>
+            <button class="portfolio__button button button_active" data-folder="autumn" data-translate="autumn">Autumn</button>
           </div>
           <div class="portfolio__works-container">
             <div class="portfolio__works" data-folder="winter">
@@ -276,7 +269,12 @@
         <div class="section__content">
           <div class="video__player">
             <div class="video__player-container">
-              <video class="video__player-img" src="images/video-3b27ffc7.mp4" controls></video>
+              <button class="video__player-play-btn">
+                <svg width="150" height="150" viewBox="0 0 150 150" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M66.2651 11.7212C65.7685 11.8411 63.3283 12.2693 60.8433 12.672C14.1708 20.2423 -7.90455 77.1726 20.9899 115.449C29.9882 127.369 50.6521 140.866 51.6756 135.492C51.8037 134.82 50.5736 133.971 47.5205 132.623C34.9949 127.091 23.6604 116.192 17.4762 103.733C-4.98486 58.4864 33.4435 7.28385 83.625 15.5953C91.1634 16.8443 92.4726 14.2411 85.0848 12.6921C81.7222 11.987 68.0793 11.2836 66.2651 11.7218V11.7212ZM66.5663 25.0636C57.7417 26.364 46.386 30.8823 46.386 33.0933C46.386 34.8088 47.6604 34.676 52.3181 32.475C77.8305 20.4212 108.891 33.61 118.133 60.4211C133.493 104.986 82.7834 142.71 44.2777 115.362C22.8809 100.166 17.9468 69.9821 33.3071 48.248C37.3831 42.4807 35.2382 40.0423 31.076 45.7122C5.43128 80.648 32.2057 129.994 75.4706 127.531C119.145 125.044 140.027 72.7104 109.973 41.0628C98.9551 29.4608 81.1807 22.9092 66.5669 25.0624L66.5663 25.0636ZM119.076 32.9315C118.18 33.8274 118.865 35.4307 121.733 39.1565C142.993 66.7766 136.032 108.061 106.841 127.485C93.688 136.237 82.1392 138.663 60.5427 137.21C58.5088 137.073 58.1327 137.229 58.1327 138.21C58.1327 142.662 83.9823 141.455 96.799 136.403C134.382 121.592 149.2 73.7793 126.546 40.4203C122.247 34.0907 120.085 31.9228 119.076 32.9321L119.076 32.9315ZM55.063 55.484C53.9947 56.664 53.9031 58.0476 53.7396 75.4795C53.4708 104.137 50.6185 103.271 85.2212 85.0411C102.085 76.1563 102.18 76.435 77.9929 63.7476C59.0829 53.8281 57.1831 53.1431 55.063 55.484ZM75.9608 66.326C94.334 75.9224 94.4297 75.9821 93.1447 77.0486C91.7037 78.2451 58.9411 95.1809 58.0689 95.1809C57.3685 95.1809 57.2291 92.0315 57.2291 76.2053C57.2291 62.8949 57.4258 57.2291 57.887 57.2291C58.2484 57.2291 66.3821 61.3228 75.9614 66.326H75.9608Z" />
+                </svg>
+              </button>
+              <img class="video__player-img" src="images/video-player-def588c7.jpg" alt="video player placeholder">
             </div>
           </div>
         </div>
@@ -397,6 +395,5 @@
         </li>
       </ul>
     </div>
-  </footer>  </div>
-</body>
+  </footer></body>
 </html>
