--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
   <title>
     Portfolio
   </title>
-<script defer src="main-a041c77c.js"></script><link href="main-a041c77c.css" rel="stylesheet"></head>
+<script defer src="main-ff0962dc.js"></script><link href="main-ff0962dc.css" rel="stylesheet"></head>
 <body>
   <header class="header">
     <div class="header__container container">
@@ -49,7 +49,7 @@
         </div>
         <div class="language-switcher">
           <a class="language-switcher__link language-switcher__link_active" href="#" data-language="en">en</a>
-          <span>&nbsp;/</span>
+          <span>/</span>
           <a class="language-switcher__link" href="#" data-language="ru">ru</a>
         </div>
       </nav>
@@ -98,10 +98,10 @@
             </li>
             <li class="skills__list-item">
               <div class="skills__list-item-icon">
-                <img src="images/image-648bb2e3.svg" alt="Rotouch skill">
+                <img src="images/image-648bb2e3.svg" alt="Retouch skill">
               </div>
               <h4 class="skills__list-item-title" data-translate="skill-title-3">
-                Rotouch
+                Retouch
               </h4>
               <div class="skills__list-item-text" data-translate="skill-text-3">
                 I strive to make photography surpass reality
@@ -285,7 +285,7 @@
         <div class="section__content">
           <ul class="price__list">
             <li class="price__list-item price-item">
-              <h3 class="price-item__title">Standart</h3>
+              <h3 class="price-item__title">Standard</h3>
               <div class="price-item__price">500&nbsp;&dollar;</div>
               <div class="price-item__text">
                 <span data-translate="price-descripton-1-span-1">One location</span><br />
@@ -357,8 +357,8 @@
   <footer class="footer">
     <div class="footer__container container">
       <div class="footer__github-link github-link">
-        &copy;&nbsp;&nbsp;&nbsp;
-        <span class="year">2022</span>
+        <span class="footer__copy">&copy;</span>
+        <span class="footer__year">2022</span>
         <a href="https://github.com/tretyakov-a">github</a>
       </div>
       <div class="footer__rsschool-link rsschool-link">
