--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
   <title>
     Portfolio
   </title>
-<script defer src="main-983912c5.js"></script><link href="main-983912c5.css" rel="stylesheet"></head>
+<script defer src="main-745d8972.js"></script><link href="main-745d8972.css" rel="stylesheet"></head>
 <body>
   <header class="header">
     <div class="header__container container">
@@ -75,8 +75,7 @@
         <div class="section__content">
           <ul class="skills__list">
             <li class="skills__list-item">
-              <div class="skills__list-item-icon">
-                <img src="images/camera-1665b105.svg" alt="Digital photography skill">
+              <div class="skills__list-item-icon skills__list-item-icon_camera">
               </div>
               <h4 class="skills__list-item-title" data-translate="skill-title-1">
                 Digital photography
@@ -86,8 +85,7 @@
               </div>
             </li>
             <li class="skills__list-item">
-              <div class="skills__list-item-icon">
-                <img src="images/video-dea00605.svg" alt="Video shooting skill">
+              <div class="skills__list-item-icon skills__list-item-icon_video">
               </div>
               <h4 class="skills__list-item-title" data-translate="skill-title-2">
                 Video shooting
@@ -97,8 +95,7 @@
               </div>
             </li>
             <li class="skills__list-item">
-              <div class="skills__list-item-icon">
-                <img src="images/image-648bb2e3.svg" alt="Retouch skill">
+              <div class="skills__list-item-icon skills__list-item-icon_retouch">
               </div>
               <h4 class="skills__list-item-title" data-translate="skill-title-3">
                 Retouch
@@ -108,8 +105,7 @@
               </div>
             </li>
             <li class="skills__list-item">
-              <div class="skills__list-item-icon">
-                <img src="images/mic-79e49654.svg" alt="Audio skill">
+              <div class="skills__list-item-icon skills__list-item-icon_audio">
               </div>
               <h4 class="skills__list-item-title" data-translate="skill-title-4">
                 Audio
@@ -359,7 +355,7 @@
       <div class="footer__github-link github-link">
         <span class="footer__copy">&copy;</span>
         <span class="footer__year">2022</span>
-        <a href="https://github.com/tretyakov-a">github</a>
+        <a href="https://github.com/tretyakov-a">tretyakov-a</a>
       </div>
       <div class="footer__rsschool-link rsschool-link">
         <a href="https://rs.school/js-stage0/">Rolling Scopes School</a>
