feat: add portfolio adaptive

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
   <title>
     Portfolio
   </title>
-<script defer src="main-745d8972.js"></script><link href="main-745d8972.css" rel="stylesheet"></head>
+<script defer src="main-f9ef8034.js"></script><link href="main-f9ef8034.css" rel="stylesheet"></head>
 <body>
   <header class="header">
     <div class="header__container container">
@@ -24,11 +24,6 @@
       </div>
       <nav class="header__nav">
         <div class="header__menu-container">
-          <button class="header__menu-hamburger menu-hamburger">
-            <span class="menu-hamburger__line"></span>
-            <span class="menu-hamburger__line"></span>
-            <span class="menu-hamburger__line"></span>
-          </button>
           <ul class="header-menu">
             <li class="header-menu__item">
               <a class="header-menu__item-link" href="#skills" data-translate="skills">Skills</a>
@@ -52,6 +47,11 @@
           <span>/</span>
           <a class="language-switcher__link" href="#" data-language="ru">ru</a>
         </div>
+        <button class="header__menu-hamburger menu-hamburger">
+          <span class="menu-hamburger__line"></span>
+          <span class="menu-hamburger__line"></span>
+          <span class="menu-hamburger__line"></span>
+        </button>
       </nav>
     </div>
   </header>  <main class="main">
@@ -62,7 +62,7 @@
           <p class="hero__text" data-translate="hero-text">
             Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
           </p>
-          <button class="hero__button button button_filled" data-translate="hire">
+          <button class="hero__button button button_filled button_ripple" data-translate="hire">
             Hire me
           </button>
         </div>
@@ -122,10 +122,10 @@
         </div>
         <div class="section__content">
           <div class="portfolio__buttons-group">
-            <button class="portfolio__button button" data-folder="winter" data-translate="winter">Winter</button>
-            <button class="portfolio__button button" data-folder="spring" data-translate="spring">Spring</button>
-            <button class="portfolio__button button" data-folder="summer" data-translate="summer">Summer</button>
-            <button class="portfolio__button button button_active" data-folder="autumn" data-translate="autumn">Autumn</button>
+            <button class="portfolio__button button button_ripple" data-folder="winter" data-translate="winter">Winter</button>
+            <button class="portfolio__button button button_ripple" data-folder="spring" data-translate="spring">Spring</button>
+            <button class="portfolio__button button button_ripple" data-folder="summer" data-translate="summer">Summer</button>
+            <button class="portfolio__button button button_ripple button_active" data-folder="autumn" data-translate="autumn">Autumn</button>
           </div>
           <div class="portfolio__works-container">
             <div class="portfolio__works" data-folder="winter">
@@ -290,7 +290,7 @@
                 <span data-translate="price-descripton-1-span-4">Readiness 2-3 weeks</span><br />
                 <span data-translate="price-descripton-1-span-5">Make up, visage</span><br />
               </div>
-              <button class="price-item__order-btn button button_filled" data-translate="order">
+              <button class="price-item__order-btn button button_ripple button_filled" data-translate="order">
                 Order shooting
               </button>
             </li>
@@ -304,7 +304,7 @@
                 <span data-translate="price-descripton-2-span-4">Readiness 1-2 weeks</span><br />
                 <span data-translate="price-descripton-2-span-5">Make up, visage</span><br />
               </div>
-              <button class="price-item__order-btn button button_filled" data-translate="order">
+              <button class="price-item__order-btn button button_ripple button_filled" data-translate="order">
                 Order shooting
               </button>
             </li>
@@ -318,7 +318,7 @@
                 <span data-translate="price-descripton-3-span-4">Readiness 1 week</span><br />
                 <span data-translate="price-descripton-3-span-5">Make up, visage, hairstyle</span><br />
               </div>
-              <button class="price-item__order-btn button button_filled" data-translate="order">
+              <button class="price-item__order-btn button button_ripple button_filled" data-translate="order">
                 Order shooting
               </button>
             </li>
@@ -332,16 +332,16 @@
             <h2 class="contacts__title" data-translate="contact-me">Contact me</h2>
             <form class="contacts__form contacts-form" action="#send">
               <div class="contacts-form__row">
-                <input name="email" type="email" placeholder="E-mail">
+                <input name="email" type="email" placeholder="E-mail" data-translate="e-mail">
               </div>
               <div class="contacts-form__row">
-                <input name="phone" type="tel" placeholder="Phone">
+                <input name="phone" type="tel" placeholder="Phone" data-translate="phone">
               </div>
               <div class="contacts-form__row">
-                <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+                <textarea name="message" cols="30" rows="10" placeholder="Message" data-translate="message"></textarea>
               </div>
               <div class="contacts-form__row">
-                <button class="contacts-form__submit button button_filled" data-translate="send-message">
+                <button class="contacts-form__submit button button_filled button_ripple" data-translate="send-message">
                   Send message
                 </button>
               </div>
