feat: update portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
   <title>
     Portfolio
   </title>
-<script defer src="main-d247943f.js"></script><link href="main-d247943f.css" rel="stylesheet"></head>
+<script defer src="main-0be7ecac.js"></script><link href="main-0be7ecac.css" rel="stylesheet"></head>
 <body>
   <header class="header">
     <div class="header__container container">
@@ -285,7 +285,7 @@
         <div class="section__content">
           <div class="video__player">
             <div class="video__player-container">
-              <video class="video__player-img" src="images/video-3b27ffc7.mp4" controls></video>
+              <video class="video__player-img" src="images/video-3b27ffc7.mp4" poster="images/video-player-def588c7.jpg" controls></video>
             </div>
           </div>
         </div>
